--- a/coker_resume.html
+++ b/coker_resume.html
@@ -103,15 +103,7 @@
 <h1>Main</h1>
 <div id="title" class="section level2">
 <h2>David A. Coker, Ph.D. </h2>
-<!--### Leadership
-
--   Successful track record transitioning concepts into solutions
--   Demonstrated experience building and leading technical teams
--   Technical contributor
-
--->
-<p>Technical leader who brings innovative solutions to challenging problems through a combination of system architecture, software design, data science, and DevSecOps techniques
-<!-- Scientific background spanning math, physics, and data science.--></p>
+<p>Technical leader who brings innovative solutions to challenging problems through a combination of system architecture, software design, data science, and DevSecOps techniques</p>
 </div>
 <div id="professional-experience" class="section level2" data-icon="suitcase">
 <h2>Professional Experience</h2>
@@ -149,9 +141,6 @@
 <li>Implemented a resilient, hybrid computing fabric for corporate operations and software development</li>
 <li>Championed automation innovation efforts that led to cost savings of more than 25% while with an 80% increase in productivity</li>
 </ul>
-<!--
-I held several positions over my tenure of 13 years with this firm. I held Program Management (Director/VP), Product Management (Director), Engineering Management (Director/VP), and IT Management (SVP/CIO) roles.
--->
 </div>
 <div id="intelligent-software-solutions" class="section level3">
 <h3>Intelligent Software Solutions</h3>
